--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.26",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.71.3",
+    "@types/react-native-vector-icons": "^6.4.13",
     "typescript": "^4.9.4"
   },
   "private": true
