--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.26",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
