--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
     "native-base": "^3.4.26",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
