--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "expo": "~48.0.5",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.3",
     "native-base": "^3.4.26",
