--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "app-loading": "^0.0.51",
     "expo": "~48.0.5",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
