--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "to-do",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "expo": "~48.0.5",
     "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "^2.2.1",
     "expo-updates": "~0.16.3",
     "native-base": "^3.4.26",
     "react": "18.2.0",
