--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "to-do",
   "version": "1.0.0",
+  "homepage": "http://dev.github.io/expo-gh-pages",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,7 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "expo": "~48.0.5",
+    "@expo/webpack-config": "^18.0.1",
+    "expo": "~48.0.6",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
@@ -29,6 +31,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
     "@types/react-native-vector-icons": "^6.4.13",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
