Altered homepage to production

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "to-do",
   "version": "1.0.0",
-  "homepage": "http://dev.github.io/expo-gh-pages",
+  "homepage": "http://wenblack.github.io/to-do-native-base",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo export:web"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
